# midistems

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  RESEARCH_DIRECTIONS.md  SETUP.md  check_python.ps1  context.md  implementation_plan.md  project_context.txt  pubspec.yaml  script2.py  setup_venv.ps1  test_ffi.dart
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: BETA_TEST_PLAN.md  FFI_ENVIRONMENT_SETUP.md  README.md
docs/analysis/: README.md  competetive_analysis.md  market_demand_analysis.md  midistems_analysis.md  midistems_validation_report.md  technical_feasibility_analysis.md
docs/setup/: README.md  ffi_setup_guide.md
lib/: combined_output.txt  main.dart  rust_service.dart
lib/data/: lol_taglines.dart
lib/screens/: audio_processing_screen.dart
lib/services/: rust_audio_service.dart
lib/ui/: app.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
python/: create_test_audio.py  midi_extractor.py  processor.py  project_context.txt  requirements.txt  script4.py
rust_core/: Cargo.toml  build.rs
rust_core/.cargo/: config.toml
rust_core/src/: api.rs  audio_io.rs  dsp.rs  lib.rs  midi.rs
rust_core/test/: manual_ffi_test.dart
rust_core/tests/: dummy_test.rs
test/: midi_engine_integration_test.dart  midi_engine_test.dart  rust_audio_service_test.dart  stem_separation_test.dart  widget_test.dart
test_ffi/: pubspec.yaml
windows/: CMakeLists.txt
(+19 files in other folders)
