[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Audio I/O
cpal = "0.15.2"
symphonia = { version = "0.5.3", features = ["mp3", "wav", "flac"] }

# DSP and audio processing
ndarray = "0.15.6"
rustfft = "6.1.0"

# FFI utilities
libc = "0.2.153"
